@@ -7,6 +7,8 @@
 	* include/include/Rcpp/iostream/Rstreambuf.h: Idem
 	* include/include/Rcpp.h:  Include new headers
 
+	* inst/unitTests/runit.rcout.R: Added simple unit test
+
 2011-09-29  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.9.7
